disable hotspot input

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                         <div id="hotspotRow">
                             <label for="hotspotSelect" class="col-form-label">Hotspot:</label>
-                            <select id="hotspotSelect" class="form-select"></select>
+                            <select id="hotspotSelect" class="form-select" disabled></select>
                         </div>
                     </div>
 
